# sigpipe

./: .gitignore  README.md  pyproject.toml  ruff.toml  run.py
configs/: passsive.yaml
experiments/: active_find.py  active_find2.py  example.py  passive.py  passive_ship.py
src/algorithms/appodization/: hanning.py
src/algorithms/appodizing/: hanning.py  registry.py
src/algorithms/beamforming/: cross.py  registry.py
src/algorithms/correlation/: cross.py  registry.py
src/algorithms/detrending/: constant.py  linear.py  registry.py
src/algorithms/dispersion/: ftan.py  phase_shift.py  registry.py
src/algorithms/filtering/: iir.py
src/algorithms/flipping/: flipping.py
src/algorithms/mutting/: mutting.py
src/algorithms/normalization/: onebit.py  registry.py
src/algorithms/normalizing/: registry.py
src/algorithms/padding/: padding.py
src/algorithms/picking/: picking.py
src/algorithms/segmentation/: slice.py
src/algorithms/slincing/: slice.py
src/algorithms/stacking/: linear.py  phase_weighted.py  registry.py  root.py
src/algorithms/whitening/: onebit.py  onebit_apod.py  registry.py  (+3 more)
src/base/: acquisition.py  beamforming.py  coordinate.py  dispersion.py  pipeline.py  stream.py  transformer.py
src/dataio/: registry.py
src/transformers/: appodization.py  appodizing.py  beamforming.py  correlation.py  detrending.py  dispersion.py  filtering.py  flipping.py  loading.py  mutting.py  normalization.py  normalizing.py  padding.py  picking.py  plotting.py  plotting_section.py  registry.py  saving.py  section.py  slicing.py  stacking.py  whitening.py
(+213 files in other folders)
