[project]
name = "sigproc"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "pandas",
    "torch",
    "obspy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py314"