[project]
name = "sigproc"
version = "1.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "pandas",
    "torch",
    "obspy",
    "disba",
    "bayesbay",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sigproc = ["py.typed"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = [
    "bayesbay.*",
    "disba.*",
    "scipy.*",
    "h5py.*",
    "torch.*",
    "obspy.*",
    "pandas.*",
    "matplotlib.*",
    "pyyaml.*",
]
ignore_missing_imports = true
